Move the filter on deleted contacts from the frontend to the backend
